# Copyright The SimpleKernel Contributors

ADD_LIBRARY (device INTERFACE)

TARGET_INCLUDE_DIRECTORIES (device INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
                                             include)

TARGET_SOURCES (device INTERFACE device.cpp)

TARGET_LINK_LIBRARIES (
    device
    INTERFACE $<$<STREQUAL:${CMAKE_SYSTEM_PROCESSOR},riscv64>: ns16550a>
              $<$<STREQUAL:${CMAKE_SYSTEM_PROCESSOR},aarch64>: pl011>
              $<$<STREQUAL:${CMAKE_SYSTEM_PROCESSOR},x86_64>: acpi>)

IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "riscv64")
    ADD_SUBDIRECTORY (driver/ns16550a)
ELSEIF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
    ADD_SUBDIRECTORY (driver/pl011)
ELSEIF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
    ADD_SUBDIRECTORY (driver/acpi)
ENDIF()
