# Copyright The SimpleKernel Contributors

PROJECT (integration-test)

IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")

ELSEIF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "riscv64")
    ADD_SUBDIRECTORY (${CMAKE_CURRENT_SOURCE_DIR}/opensbi_test)
ELSEIF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")

ENDIF()

ADD_SUBDIRECTORY (${CMAKE_CURRENT_SOURCE_DIR}/cxx_init_test)
